--- a/dinuan/index.html
+++ b/dinuan/index.html
@@ -21,16 +21,16 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>地暖管道 | 日丰管潍坊总代理潍坊区域服务中心</title>
+  <title>地暖管道 | 中财管潍坊总代理潍坊区域服务中心</title>
 </head>
 
 <body>
   <section class="page-header">
   <h1 class="project-name">
-    日丰潍坊服务中心
+    中财潍坊服务中心
   </h1>
   <h2 class="project-tagline">
-    日丰管潍坊总代理、日丰地暖、日丰卫浴
+    中财管潍坊总代理、中财地暖、中财卫浴
   </h2>
   <nav>
 
@@ -52,16 +52,16 @@
   <div>
     
  <p> <img src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengdinuan.png"/></p>
-<h4>日丰地暖管种类非常多，其中日丰潍坊总代理这边有以下几种可供广大业主选择：</h4>
+<h4>中财地暖管种类非常多，其中中财潍坊总代理这边有以下几种可供广大业主选择：</h4>
     
-日丰地暖管种类非常多，其中日丰潍坊总代理这边有以下几种可供广大业主选择：
+中财地暖管种类非常多，其中中财潍坊总代理这边有以下几种可供广大业主选择：
 <h2>一、PERT系列</h2>
 
 <p>1、pert地暖管（黄色）</p>
 
 <p>2、pert地暖管（橙色光滑）</p>
 
-<p>3、pert精品地暖管（金色精品）– 日丰地暖管材，采用国内先进的挤出工艺，管材内壁光滑度较普通管材提升50%，管道内壁不易结垢，减少热量损耗，暖得更快。</p>
+<p>3、pert精品地暖管（金色精品）– 中财地暖管材，采用国内先进的挤出工艺，管材内壁光滑度较普通管材提升50%，管道内壁不易结垢，减少热量损耗，暖得更快。</p>
 
 <h2>二、PEX-B地暖管（红色）</h2>– 耐95度高温，长期高温环境不变形，交联聚合分子结构使其具有记忆性（鼓包后能自动恢复）。</p>
 
@@ -81,9 +81,9 @@
 
 
 <img class="alignnone size-full wp-image-751 aligncenter" src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengjinsedinuanguan.jpg"/>
-<h3 style="text-align: center;"><p>日丰金色精品地暖管（pert）</span></h3>
+<h3 style="text-align: center;"><p>中财金色精品地暖管（pert）</span></h3>
 <img class="alignnone size-full wp-image-753 aligncenter" src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifenglvsuguan.png" alt="" width="100%" height="auto" />
-<h3 style="text-align: center;">日丰铝塑管</h3>
+<h3 style="text-align: center;">中财铝塑管</h3>
 <img src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengfenshuiqi.png"/>
  
 
@@ -94,7 +94,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://www.rifengwf.com">日丰潍坊服务中心</a> . 技术支持
+    <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持
   </span>
 </footer>
 
