--- a/weiyu/index.html
+++ b/weiyu/index.html
@@ -25,16 +25,16 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>日丰卫浴五金 | 日丰管潍坊总代理潍坊区域服务中心</title>
+  <title>中财卫浴五金 | 中财管潍坊总代理潍坊区域服务中心</title>
 </head>
 
 <body>
   <section class="page-header">
   <h1 class="project-name">
-    日丰潍坊服务中心
+    中财潍坊服务中心
   </h1>
   <h2 class="project-tagline">
-    日丰管潍坊总代理、日丰地暖、日丰卫浴
+    中财管潍坊总代理、中财地暖、中财卫浴
   </h2>
   <nav>
      
@@ -51,7 +51,7 @@
 
   <section class="main-content">
     
-  <h1>日丰卫浴五金</h1>
+  <h1>中财卫浴五金</h1>
 <p><img src="./wyimg/1.jpg" alt=""></p>
 <p><img src="./wyimg/2.jpg" alt=""></p>
 <p><img src="./wyimg/3.jpg" alt=""></p>
@@ -66,7 +66,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://www.rifengwf.com">日丰潍坊服务中心</a> . 技术支持
+    <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持
   </span>
 </footer>
   </section>
