--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
   <section class="main-content"> 
 <h1 id="中财潍坊">中财潍坊</h1>
 <h3 id="中财产品">中财产品包括：中财pe市政管道、中财ppr供水管、中财pvc排水管、中财pvc穿线管、中财地暖管及分集水器、中财玻璃胶、中财卫浴五金等</h3>
-<h3 id="联系人李经理18553659321">李经理<a href="tel:18553659321">18553659321</a></h3>
+<h3 id="联系人付经理15853677120">付经理<a href="tel:15853677120">15853677120</a></h3>
                                                        
 <h1>关于我们</h1>                           
   <p>中财企业集团有限公司是中国新型塑料管道研发生产与推广应用的知名企业，中国给水管道升级、变革的重要推动者，是中国塑料加工工业协会塑料管道专业委员会副理事长单位，国家火炬计划重点高新技术企业，同时也是管道与卫浴全面发展的大型建材产业集团。</p>
@@ -61,7 +61,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-   <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持 . <a href="tel:18553659321">联系电话</a>
+   <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持 . <a href="tel:15853677120">联系电话</a>
   </span>
 </footer>
 
