--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
   <h1 id="中财潍坊">中财潍坊</h1>
 <h3 id="中财产品">中财产品包括：中财pe市政管道、中财ppr供水管、中财pvc排水管、中财pvc穿线管、中财地暖管及分集水器、中财玻璃胶、中财卫浴五金等</h3>
-<h3 id="联系人李经理18553659321">李经理<a href="tel:18553659321">18553659321</a></h3>
+<h3 id="联系人付经理15853677120">付经理<a href="tel:15853677120">15853677120</a></h3>
 <h2 id="中财管">中财管</h2>
 <p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/1.jpg" alt="中财管潍坊总代理"></p>
  <h2 id="中财市政">中财市政</h2>   
@@ -60,50 +60,14 @@
 <p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/3.jpg" alt="中财地暖管潍坊总代理"></p> 
 <h2 id="中财卫浴">中财卫浴</h2>
 <p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/4.jpg" alt="中财地暖管潍坊总代理"></p> 
-<h2 id="中财玻璃胶">中财玻璃胶</h2>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/5.jpg" alt="中财玻璃胶潍坊总代理"></p> 
-<h2 id="工程案例">工程案例</h2>
-<pre>
-<code>浞河九号
-高创公寓
-金秋逸品府
-恒信理想小镇
-福第一品
-地税局宿舍暖气改造
-新型职业农民培训中心
-颐清园南屯新村暖气改造
-老蠢旗下本屋酒店圣基酒店100多间客房改造项目
-珊瑚酒店100多间客房项目
-滨海弘润石化
-北辰白鹭湾
-泰祥府邸
-万创空间
-恒联御苑
-潍坊文华高端教育园区职工住宅楼
-裕隆苑
-齐鲁酒地
-歌尔绿城
-金光大道
-峡山四季花海农业开发集团
-高创安尼森幼儿园英煌国际幼儿园
-山东工业技师学院
-滨海职业学院
-潍坊总部基地
-潍坊洲际酒店
-宏坤建筑新型材料厂区
-大元华府别墅区
-电力三宿舍暖气改造工程
-潍柴水岸华庭
-潍坊寿光市人民医院
-盛和居家属楼金融小区
-潍坊市第二人民医院
-金鸾御景城
-新富专家公寓</code></pre>
+
+
+
 <p align="center"><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/logo.jpg" alt="中财管潍坊总代理"></p> 
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持.<a href="tel:18553659321">联系电话</a>
+    <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持.<a href="tel:15853677120">联系电话</a>
   </span>
 </footer>
 
