--- a/down/index.html
+++ b/down/index.html
@@ -51,7 +51,7 @@
   <section class="main-content">
   <h1 id="中财潍坊">中财潍坊</h1>
 <h3 id="中财产品">中财产品包括：中财pe市政管道、中财ppr供水管、中财pvc排水管、中财pvc穿线管、中财地暖管及分集水器、中财玻璃胶、中财卫浴五金等</h3>
-<h3 id="联系人李经理18553659321">李经理<a href="tel:18553659321">18553659321</a></h3>
+<h3 id="联系人付经理15853677120">付经理<a href="tel:15853677120">15853677120</a></h3>
     
   <h1>下载中心</h1>
 <p>1.检测报告</p>
@@ -68,7 +68,7 @@
 </code></pre>
 <p align="center"><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/logo.jpg" alt="中财管潍坊总代理"></p> 
     <footer class="site-footer">
-  <span class="site-footer-credits"> <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持 . <a href="tel:18553659321">联系电话</a> </span>
+  <span class="site-footer-credits"> <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持 . <a href="tel:15853677120">联系电话</a> </span>
 </footer>
 
   </section>
