--- a/down/index.html
+++ b/down/index.html
@@ -68,7 +68,7 @@
 </code></pre>
 <p align="center"><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/logo.jpg" alt="中财管潍坊总代理"></p> 
     <footer class="site-footer">
-  <span class="site-footer-credits"> <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持 . <a href="tel:15853677120">联系电话</a> </span>
+  <span class="site-footer-credits"> <a href="https://zhongcai.wfzdl.com">中财潍坊服务中心</a> . 技术支持 . <a href="tel:15853677120">联系电话</a> </span>
 </footer>
 
   </section>
