--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持.<a href="tel:15853677120">联系电话</a>
+    <a href="https://zhongcai.wfzdl.com">中财潍坊服务中心</a> . 技术支持.<a href="tel:15853677120">联系电话</a>
   </span>
 </footer>
 
