--- a/pvc/index.html
+++ b/pvc/index.html
@@ -62,7 +62,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://www.rifengwf.com">中财潍坊服务中心</a> . 技术支持
+    <a href="https://zhongcai.wfzdl.com">中财潍坊服务中心</a> . 技术支持
   </span>
 </footer>
 
