--- a/weiyu/index.html
+++ b/weiyu/index.html
@@ -25,16 +25,16 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>中财卫浴五金 | 中财管潍坊总代理潍坊区域服务中心</title>
+  <title>中财卫浴五金 | 中财管业潍坊总代理</title>
 </head>
 
 <body>
   <section class="page-header">
   <h1 class="project-name">
-    中财潍坊服务中心
+    潍坊中财管业总代理
   </h1>
   <h2 class="project-tagline">
-    中财管潍坊总代理、中财地暖、中财卫浴
+    中财管业潍坊总代理、中财地暖、中财卫浴
   </h2>
   <nav>
      
@@ -66,7 +66,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://zhongcai.wfzdl.com">中财潍坊服务中心</a> . 技术支持
+    <a href="https://zhongcai.wfzdl.com">潍坊中财管业总代理</a> . 技术支持
   </span>
 </footer>
   </section>
