--- a/down/index.html
+++ b/down/index.html
@@ -66,7 +66,7 @@
 </code></pre><p>3.</p>
 <pre><code>#
 </code></pre>
-<p align="center"><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/logo.jpg" alt="中财管业潍坊总代理"></p> 
+<p align="center"><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/zhongcai.jpg" alt="中财管业潍坊总代理"></p> 
     <footer class="site-footer">
   <span class="site-footer-credits"> <a href="https://zhongcai.wfzdl.com">潍坊中财管业总代理</a> . 技术支持 . <a href="tel:15853677120">联系电话</a> </span>
 </footer>
