--- a/about/index.html
+++ b/about/index.html
@@ -52,11 +52,9 @@
 <h3 id="联系人付经理15853677120">付经理<a href="tel:15853677120">15853677120</a></h3>
                                                        
 <h1>关于我们</h1>                           
-  <p>中财企业集团有限公司是中国新型塑料管道研发生产与推广应用的知名企业，中国给水管道升级、变革的重要推动者，是中国塑料加工工业协会塑料管道专业委员会副理事长单位，国家火炬计划重点高新技术企业，同时也是管道与卫浴全面发展的大型建材产业集团。</p>
-<p>20世纪九十年代，中财在国内率先引进欧洲先进的技术与设备，开启新型管道研发生产道路，逐步改变国内长期使用镀锌水管的现状，推动中国众多新型管道企业的兴起与行业变革，成为新型塑料管道行业的大型综合企业。</p>
-<p>自公司成立以来，中财一直将产品品质视为企业发展壮大的核心竞争力，坚持走品质为先的发展道路。中财公司拥有国家认定企业技术中心、CNAS认证实验室等研发机构，获得600余项国内外专利，这些都为产品品质提供了的坚实保障。在涉及产品的原料选购、生产运输等环节，中财公司严格加强把控，每一个工序，每一个细节，都做到精益求精。</p>
-<p>中财产品还通过美国NSF、德国SKZ等50多项国际认证，畅销全球的100多个国家和地区，荣获全球亿万用户一致认可与广泛赞誉。</p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/2222.jpg" alt=""></p>
+  <p>中财管道是中财集团化学建材业下属的重点产业，目前共有以浙江中财管道科技股份有限公司为基础的10大生产基地，营销网络更是遍布全国乃至全世界。
+    作为“管道集成方案解决商”为宗旨，中财管道一直将呵护城市发展和提高人们生活品质为宗旨，本着追求完美的精神，目前有10大管道系统、50多个系列，5000多个品种，在行业内推出Z-HOME系统，为您量身打造洁净、舒适、清新、活力、安全、温馨的家居环境。中财管道已成为国内产品较齐全、规模较大的塑料管道专业生产企业之一。</p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/1.jpg" alt=""></p>
 
 
     <footer class="site-footer">
