--- a/dinuan/index.html
+++ b/dinuan/index.html
@@ -52,9 +52,9 @@
   <div>
     
  <p> <img src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengdinuan.png"/></p>
-<h4>中财地暖管种类非常多，其中中财潍坊总代理这边有以下几种可供广大业主选择：</h4>
+<h4>中财地暖管种类非常多，其中潍坊中财总代理这边有以下几种可供广大业主选择：</h4>
     
-中财地暖管种类非常多，其中中财潍坊总代理这边有以下几种可供广大业主选择：
+中财地暖管种类非常多，其中潍坊中财总代理这边有以下几种可供广大业主选择：
 <h2>一、PERT系列</h2>
 
 <p>1、pert地暖管（黄色）</p>
