--- a/dinuan/index.html
+++ b/dinuan/index.html
@@ -51,41 +51,11 @@
   <h1>地暖管道</h1>
   <div>
     
- <p> <img src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengdinuan.png"/></p>
-<h4>中财地暖管种类非常多，其中潍坊中财总代理这边有以下几种可供广大业主选择：</h4>
-    
-中财地暖管种类非常多，其中潍坊中财总代理这边有以下几种可供广大业主选择：
-<h2>一、PERT系列</h2>
-
-<p>1、pert地暖管（黄色）</p>
-
-<p>2、pert地暖管（橙色光滑）</p>
-
-<p>3、pert精品地暖管（金色精品）– 中财地暖管材，采用国内先进的挤出工艺，管材内壁光滑度较普通管材提升50%，管道内壁不易结垢，减少热量损耗，暖得更快。</p>
-
-<h2>二、PEX-B地暖管（红色）</h2>– 耐95度高温，长期高温环境不变形，交联聚合分子结构使其具有记忆性（鼓包后能自动恢复）。</p>
-
-<h2>三、阻氧系列</h2>
-
-<p>1、pert阻氧管（红色）– 纯进口阻氧层，隔绝氧气，防止管道内细菌、真菌及藻类生长，防止阀门等管件腐蚀，延长壁挂炉、热水器、地暖分水器等设备寿命。</p>
-
-<p>2、pexb阻氧管</p>
-
-<h2>四、pb系列地暖管道（象牙白）</h2>– pb管材被誉为管道中的软黄金，质地柔软，稳定性强，耐120度高温，便捷施工，使用寿命更长。
-
-<h2>五、铝塑系列 </h2>– 阻氧性能基础上，减少热胀冷缩系数，采暖更安全可靠，导热效果更佳。
-
-<p>1、铝塑地暖管</p>
-
-<p>2、铝塑中央配水管道</p>
-
-
-<img class="alignnone size-full wp-image-751 aligncenter" src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengjinsedinuanguan.jpg"/>
-<h3 style="text-align: center;"><p>中财金色精品地暖管（pert）</span></h3>
-<img class="alignnone size-full wp-image-753 aligncenter" src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifenglvsuguan.png" alt="" width="100%" height="auto" />
-<h3 style="text-align: center;">中财铝塑管</h3>
-<img src="https://log1024.oss-cn-qingdao.aliyuncs.com/2019/04/rifengfenshuiqi.png"/>
- 
+ <p> <img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/dinuan/1.jpg"/></p>
+ <p> <img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/dinuan/2.jpg"/></p>
+ <p> <img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/dinuan/3.jpg"/></p>
+ <p> <img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/dinuan/4.jpg"/></p>
+ <p> <img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/dinuan/5.jpg"/></p>
 
  </div>
 
