--- a/ppr/index.html
+++ b/ppr/index.html
@@ -50,11 +50,11 @@
   <h1>PPR管道</h1>
   <div>
     
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pprimg/1.jpg" alt=""></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pprimg/2.jpg" alt=""></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pprimg/3.jpg" alt=""></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pprimg/4.jpg" alt=""></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pprimg/5.jpg" alt=""></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/ppr/ppr_01.jpg" alt=""></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/ppr/ppr_02.jpg" alt=""></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/ppr/ppr_03.jpg" alt=""></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/ppr/ppr_04.jpg" alt=""></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/ppr/ppr_05.jpg" alt=""></p>
 
   </div>
  
