--- a/dinuan/index.html
+++ b/dinuan/index.html
@@ -64,7 +64,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://zhongcai.wfzdl.com">潍坊中财管业总代理</a> . 技术支持
+    <a href="https://zhongcai.wfzdl.com">潍坊中财管业总代理</a> . 技术支持 . <a href="tel:15853677120">联系电话</a>
   </span>
 </footer>
 
