--- a/pvc/index.html
+++ b/pvc/index.html
@@ -49,12 +49,11 @@
     
   <h1>PVC管道</h1>
   <div>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pvc/pvc_01.jpg" alt="pvc排水"></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pvc/pvc_02.jpg" alt="中财pvc管道"></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pvc/pvc_03.jpg" alt="中财排水管潍坊总代理"></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pvc/pvc_04.jpg" alt="潍坊中财pvc管"></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pvc/pvc_05.jpg" alt="潍坊中财管"></p>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/pvc/pvc_06.jpg" alt="中财管业潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/pvc/pvc_01.jpg" alt="pvc排水"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/pvc/pvc_02.jpg" alt="中财pvc管道"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/pvc/pvc_03.jpg" alt="中财排水管潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/pvc/pvc_04.jpg" alt="潍坊中财pvc管"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/pvc/pvc_05.jpg" alt="潍坊中财管"></p>
   </div>
   
 
@@ -62,7 +61,7 @@
 
     <footer class="site-footer">
   <span class="site-footer-credits">
-    <a href="https://zhongcai.wfzdl.com">潍坊中财管业总代理</a> . 技术支持
+    <a href="https://zhongcai.wfzdl.com">潍坊中财管业总代理</a> . 技术支持 . <a href="tel:15853677120">联系电话</a>
   </span>
 </footer>
 
