--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
 <h3 id="中财产品">中财产品包括：中财pe市政管道、中财ppr供水管、中财pvc排水管、中财pvc穿线管、中财地暖管及分集水器、中财玻璃胶、中财卫浴五金等</h3>
 <h3 id="联系人付经理15853677120">付经理<a href="tel:15853677120">15853677120</a></h3>
 <h2 id="中财管">中财管</h2>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/1.jpg" alt="中财管业潍坊总代理"></p>
- <h2 id="中财市政">中财市政</h2>   
- <p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/2.jpg" alt="中财市政管潍坊总代理"></p>  
-<h2 id="中财地暖">中财地暖管</h2>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/3.jpg" alt="中财地暖管潍坊总代理"></p> 
-<h2 id="中财卫浴">中财卫浴</h2>
-<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/rf/images/4.jpg" alt="中财地暖管潍坊总代理"></p> 
+<p>中财管道是中财集团化学建材业下属的重点产业，目前共有以浙江中财管道科技股份有限公司为基础的10大生产基地，营销网络更是遍布全国乃至全世界。
+  作为“管道集成方案解决商”为宗旨，中财管道一直将呵护城市发展和提高人们生活品质为宗旨，本着追求完美的精神，目前有10大管道系统、50多个系列，5000多个品种，在行业内推出Z-HOME系统，为您量身打造洁净、舒适、清新、活力、安全、温馨的家居环境。中财管道已成为国内产品较齐全、规模较大的塑料管道专业生产企业之一。</p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/images/1.jpg" alt="中财管业潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/images/2.jpg" alt="中财管业潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/images/3.jpg" alt="中财管业潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/images/4.jpg" alt="中财管业潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/images/5.jpg" alt="中财管业潍坊总代理"></p>
+<p><img src="https://wfzdl.oss-cn-beijing.aliyuncs.com/zhongcai/images/6.jpg" alt="中财管业潍坊总代理"></p>
 
 
 
