--- a/down/index.html
+++ b/down/index.html
@@ -24,7 +24,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>下载中心 | 中财管业潍坊总代理</title>
+  <title>工程中心 | 中财管业潍坊总代理</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
       <a href="/about/" class="btn">关于</a>
  
-      <a href="/down/" class="btn">下载</a>
+      <a href="/down/" class="btn">工程</a>
     
   </nav>
 </section>
@@ -53,7 +53,7 @@
 <h3 id="中财产品">中财产品包括：中财pe市政管道、中财ppr供水管、中财pvc排水管、中财pvc穿线管、中财地暖管及分集水器、中财玻璃胶、中财卫浴五金等</h3>
 <h3 id="联系人付经理15853677120">付经理<a href="tel:15853677120">15853677120</a></h3>
     
-  <h1>下载中心</h1>
+  <h1>工程中心</h1>
 <p>1.检测报告</p>
  <pre><code><p><a href="http://www.rifeng.com.cn:8080/upload/2006/20206286514.rar">ppr管材及管件</a></p><p><a href="http://www.rifeng.com.cn:8080/upload/2006/20206294354.rar">阀门、分水器</a></p><p><a href="http://www.rifeng.com.cn:8080/upload/2006/20206283039.rar">pvc排水管及管件</a></p><p><a href="http://www.rifeng.com.cn:8080/upload/2006/20206281519.rar">pvc穿线管及管件、线盒</a></p><p><a href="http://www.rifeng.com.cn:8080/upload/2006/20206289582.rar">PE给谁管及管件</a></p><p><a href="http://www.rifeng.com.cn:8080/upload/2006/20206285039.rar">其他管材</a></p>
 </code></pre>
